--- a/demo1.html
+++ b/demo1.html
@@ -88,7 +88,7 @@
         Click <span style="color:rgb(255, 108, 71); font-weight: 700;">NEXT</span> when you can hear the<span style="color:rgb(255, 108, 71); font-weight: 700;">softest or slightest</span> tone.
       </p>
 
-      <button class="test_btn" onclick="window.location.href='demo1.html'">
+      <button class="test_btn" onclick="window.location.href='demo.html'">
         <i class="fa-solid fa-play fab-icon"></i>Start
       </button>
 
