--- a/demo1.html
+++ b/demo1.html
@@ -50,20 +50,20 @@
 
           <li class="nav-item links">
             <div class="dropdown">
-              <a class="nav-link" href="dashboard.html">Home</a>
+              <a class="nav-link" href="">Home</a>
               <div class="dropdown-content">
-                <a class="nav-link links" href="dashboard.html#about">About</a>
-                <a class="nav-link links" href="#Card">FAQ</a>
-                <a class="nav-link links" href="dashboard.html#contact">Contact</a>
+                <a class="nav-link links" href="">About</a>
+                <a class="nav-link links" href="">FAQ</a>
+                <a class="nav-link links" href="">Contact</a>
               </div>
             </div>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link active-link" href="test.html">Test</a>
+            <a class="nav-link active-link" href="demo1.html">Test</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link links" href="#contact">Records</a>
+            <a class="nav-link links" href="">Records</a>
           </li>
           <li class="nav-item">
             <div class="dropdown">
@@ -72,7 +72,7 @@
               </button>
               <ul class="dropdown-menu">
                 <li><a class="nav-link links dropdown-item" type="button">Edit Profile</a></li>
-                <li><a class="nav-link links dropdown-item" type="button" href="logout.php">Log Out</a></li>
+                <li><a class="nav-link links dropdown-item" type="button" href="">Log Out</a></li>
               </ul>
             </div>
           </li>
